fix : overlapping errors fixed

--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -3,6 +3,7 @@
 .faqpage {
     height: 80vh;
     width: 100%;
+    min-height: 670px;
 }
 
 #header-faq {
