--- a/src/styles/sponsors.css
+++ b/src/styles/sponsors.css
@@ -1,6 +1,7 @@
 .sponsorPage {
     height: 50vh;
     width: 100%;
+    min-height: 500px;
     /* display: none; */
 }
 
@@ -65,6 +66,9 @@
     margin-left: 5%;
 }
 @media only screen and (max-width: 768px){
+    .sponsorPage {
+        min-height: 300px;
+    }
     .sponsorPage .header-sponsorPage h1 {
         font-size: 30px;
     }
